width: 100% removed to fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,6 @@
 
 .App-item{
   padding: 15px;
-  width: 100%;
   color: white;
   font-weight: bold;
   border: 1px solid white
